# wit-term

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  (+2 more)
completions/: apt.toml  brew.toml  cargo.toml  docker.toml  general.toml  git.toml  kubectl.toml  make.toml  npm.toml  pip.toml  pnpm.toml  ssh.toml  systemctl.toml  yarn.toml
documents/: README.md  ROADMAP.md
shell-integration/: wit.bash  wit.fish  wit.ps1  wit.zsh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  persistence.rs
src-tauri/src/agent/: detector.rs  mod.rs  types.rs  watcher.rs
src-tauri/src/agent/adapters/: claude_code.rs  mod.rs
src-tauri/src/commands/: completion.rs  config.rs  context.rs  mod.rs  session.rs
src-tauri/src/completion/: context_source.rs  fuzzy.rs  mod.rs  parser.rs  path_source.rs  static_source.rs
src-tauri/src/config/: mod.rs  theme.rs
src-tauri/src/context/: docker.rs  generic.rs  git.rs  go.rs  java.rs  mod.rs  node.rs  python.rs  rust.rs
src-tauri/src/parser/: mod.rs  params.rs  state_machine.rs
src-tauri/src/plugin/: loader.rs  manifest.rs  mod.rs
src-tauri/src/pty/: mod.rs  unix.rs  windows.rs
src-tauri/src/session/: mod.rs
src-tauri/src/terminal/: emulator.rs  grid.rs  mod.rs  strip.rs
src-tauri/tests/: integration_test.rs
themes/: wit-dark.toml  wit-light.toml
(+99 files in other folders)
