[package]
name = "wit"
version = "0.1.0"
description = "A context-aware terminal emulator"
authors = []
license = "MPL-2.0"
repository = "https://github.com/nickcdryan/wit-term"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"

# Concurrency
parking_lot = "0.12"

# Data structures
bitflags = "2"
compact_str = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "2"
anyhow = "1"

# Config
toml = "0.8"
dirs = "6"
tauri-plugin-dialog = "2.6.0"

# Process inspection
sysinfo = "0.33"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"
unicode-width = "0.2.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term", "process"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
] }

[dev-dependencies]
insta = "1"
tempfile = "3"
